--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,13 @@
 		<meta name="keywords" content="Jason Howie Developer">
 		<meta name="author" content="Jason Howie">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" href="{{ site.baseurl }}{% link img/favicon.ico %}">
+		<link rel="icon" href="http://{{ site.baseurl }}{% link img/favicon.ico %}">
 		<title>{{ page.title }} | Jason Howie</title>
 		<!-- Font Awesome CDN -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 		<!-- bootstrap CDN -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link rel="stylesheet" href="{{ site.baseurl}}{% link styles/styles.css %}">
+		<link rel="stylesheet" href="https://{{ site.baseurl }}{% link styles/styles.css %}">
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="navbarToggleExternalContent">
@@ -23,13 +23,13 @@
 		  <div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav">
 		      <li class="nav-item">
-		        <a class="nav-link" href="{{ site.baseurl }}{% link index.html %}">Home</a>
+		        <a class="nav-link" href="https://{{ site.baseurl }}{% link index.html %}">Home</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="{{ site.baseurl }}{% link pages/portfolio.html %}">Portfolio</a>
+		        <a class="nav-link" href="https://{{ site.baseurl }}{% link pages/portfolio.html %}">Portfolio</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="{{ site.baseurl }}{% link pages/blog.html %}">Blog</a>
+		        <a class="nav-link" href="https://{{ site.baseurl }}{% link pages/blog.html %}">Blog</a>
 		      </li>
 		    </ul>
 		  </div>
