--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="container">
+<div class="container post">
 	<h5>{{ page.title }}</h5>
 	<h6>{{ page.date | date: "%A - %m/%d/%y" }}</h6>
 	{{ content }}
