Created google anaylitics script tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		{% include analytics.html %}
 		<meta charset="UTF-8">
 		<meta name="description" content="Jason Howie's personal website">
 		<meta name="keywords" content="Jason Howie Developer">
