Few edits to social media links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,6 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="navbarToggleExternalContent">
-		  <a class="navbar-brand" href="#">Jason Howie</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -46,9 +45,7 @@
 			{{ content }}
 			<!-- /Main Content -->
 			<div class="container">
-				<p>Follow me on: <a href="https://twitter.com/howhow1" target="_blank">Twitter</a><br>
-				Check out my: <a href="https://github.com/bt93" target="_blank">GitHub</a><br>
-				Check out my: <a href="https://www.linkedin.com/in/jason-howie-837ba36b/" target="_blank">LinkedIn</a></p>
+				<p>Contact me at: <a href="mailto:contact@jasonrhowie.com">contact@jasonrhowie.com</a></p>
 			</div>
 		</div>
 
@@ -58,6 +55,15 @@
 		  	</div>
 		  	<div class="float-right foot-text">
 		  		<p>Made with <strong><span class="b-s">Bootstrap</span></strong> and <strong><span class="jk">Jekyll</span></strong>.</p>
+		  		<div class="icons">
+		  	<p>
+		  		<a href="https://twitter.com/howhow1" target="_blank"><i class="fab fa-twitter"></i></a>
+		  		<a href="https://github.com/bt93" target="_blank"><i class="fab fa-github"></i></a>
+		  		<a href="https://www.linkedin.com/in/jason-howie-837ba36b/" target="_blank"><i class="fab fa-linkedin"></i></a>
+		  		<a href="https://www.youtube.com/channel/UCF5LcI7ConBpK0k-JooewCg" target="_blank"><i class="fab fa-youtube"></i></a>
+		  		<a href="mailto:contact@jasonrhowie.com"><i class="fas fa-at"></i></a>
+		  	</p>
+		  </div>
 		  	</div>
 		</nav>
 
