--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,3 +6,8 @@ layout: default
 	<h6>{{ page.date | date: "%A - %m/%d/%y" }}</h6>
 	{{ content }}
 </div>
+<div class="container">
+	<p>Follow me on: <a href="https://twitter.com/howhow1" target="_blank">Twitter</a><br>
+	Check out my: <a href="https://github.com/bt93" target="_blank">GitHub</a><br>
+	Check out my: <a href="https://www.linkedin.com/in/jason-howie-837ba36b/" target="_blank">LinkedIn</a></p>
+</div>
