--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,14 +4,10 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarNav">
 	<ul class="navbar-nav">
-	  <li class="nav-item">
-	    <a class="nav-link {% if page.title == "Home" %} active {% endif %}" href="{{ site.baseurl }}{% link index.html %}">Home</a>
-	  </li>
-	  <li class="nav-item">
-	    <a class="nav-link {% if page.title == "Portfolio" %} active {% endif %}" href="{{ site.baseurl }}{% link pages/portfolio.html %}">Portfolio</a>
-	  </li>
-	  <li class="nav-item">
-	    <a class="nav-link {% if page.title == "Blog" %} active {% endif %} {% if page.layout == "post" %} active {% endif %}" href="{{ site.baseurl }}{% link pages/blog.html %}">Blog</a>
+		{% for item in site.data.navigation %}
+	  	<li class="nav-item">
+   			 <a href="{{ site.baseurl }}{{ item.link }}" class="nav-link{% if page.url == item.link %} active {% endif %}">{{ item.name }}</a>
+  		{% endfor %}
 	  </li>
 	</ul>
 	</div>
