move things around

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,5 +9,6 @@ layout: default
 <div class="container">
 	<p>Follow me on: <a href="https://twitter.com/howhow1" target="_blank">Twitter</a><br>
 	Check out my: <a href="https://github.com/bt93" target="_blank">GitHub</a><br>
-	Check out my: <a href="https://www.linkedin.com/in/jason-howie-837ba36b/" target="_blank">LinkedIn</a></p>
+	Check out my: <a href="https://www.linkedin.com/in/jason-howie-837ba36b/" target="_blank">LinkedIn</a><br>
+	Contact me at: <a href="mailto:contact@jasonrhowie.com">contact@jasonrhowie.com</a></p>
 </div>
