--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,12 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 		<!-- bootstrap CDN -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 		<link rel="stylesheet" href="{{ site.baseurl }}{% link styles/styles.css %}">
 	</head>
 	<body>
 		{% include navigation.html %}
-		<div class="jumbotron">
+		<div class="jumbotron {% if page.title == 'Home' %}animated bounceInRight{% endif %}">
 		  <div class="container">
 		    <h1 class="display-4">Jason Howie</h1>
 		    <p class="lead">Aspiring Web Developer</p>
@@ -29,7 +30,7 @@
 			<!-- /Main Content -->
 		</div>
 
-		<nav class="footer navbar navbar-fixed-bottom navbar-expand-sm navbar-light bg-light">
+		<nav class="footer navbar navbar-fixed-bottom navbar-expand-sm navbar-light bg-light {% if page.title == 'Home' %}animated bounceInRight{% endif %}">
 			<div class="container float-left">
 		  		<p>Jason Howie {{ site.time | date: '%Y' }}</p>
 		  	</div>
