Few edits to styles and navbar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 		    <p class="lead">Aspiring Web Developer</p>
 		  </div>
 		</div>
-		<div class="main-content animated fadeIn">
+		<div class="main-content container animated fadeIn">
 			<!-- Main Content -->
 			{{ content }}
 			<!-- /Main Content -->
