add background image to jumbotron

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		{% include navigation.html %}
-		<div class="jumbotron">
+		<div class="jumbotron background">
 		  <div class="container">
 		    <h1 class="display-4">Jason Howie</h1>
 		    <p class="lead">Aspiring Web Developer</p>
