--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,7 +6,7 @@
 	<ul class="navbar-nav">
 		{% for item in site.data.navigation %}
 	  	<li class="nav-item">
-   			 <a href="{{ site.baseurl }}{{ item.link }}" class="nav-link {% if page.url == item.link %}active {% endif %}{% if page.layout == 'post' and forloop.last == true %}active{% endif %}">{{ item.name }}</a>
+   			 <a href="{% if page.url == item.link %}#{% else %}{{ site.baseurl }}{{ item.link }}{% endif %}" class="nav-link {% if page.url == item.link %}active {% endif %}{% if page.layout == 'post' and forloop.last == true %}active{% endif %}">{{ item.name }}</a>
 	  	</li>
 	  	{% endfor %}
 	</ul>
