--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,12 +19,7 @@
 	</head>
 	<body>
 		{% include navigation.html %}
-		<div class="jumbotron background">
-		  <div class="container">
-		    <h1 class="display-4">Jason Howie</h1>
-		    <p class="lead">Aspiring Web Developer</p>
-		  </div>
-		</div>
+		{% include header.html %}
 		<div class="main-content container animated fadeIn">
 			<!-- Main Content -->
 			{{ content }}
@@ -38,15 +33,9 @@
 		  	<div class="float-right foot-text">
 		  		<p>Made with <strong><span class="b-s">Bootstrap</span></strong> and <strong><span class="jk">Jekyll</span></strong>.</p>
 		  		<div class="icons">
-		  	<p>
-		  		<a href="https://twitter.com/howhow1" target="_blank"><i class="fab fa-twitter"></i></a>
-		  		<a href="https://github.com/bt93" target="_blank"><i class="fab fa-github"></i></a>
-		  		<a href="https://www.linkedin.com/in/jason-howie-837ba36b/" target="_blank"><i class="fab fa-linkedin"></i></a>
-		  		<a href="https://www.youtube.com/channel/UCF5LcI7ConBpK0k-JooewCg" target="_blank"><i class="fab fa-youtube"></i></a>
-		  		<a href="mailto:contact@jasonrhowie.com"><i class="fas fa-at"></i></a>
-		  	</p>
+				  	{% include soc_media.html %}
+		  		</div>
 		  </div>
-		  	</div>
 		</nav>
 	</body>
 	<!-- JQuery CDN -->
