changed order of portfolio

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="jumbotron background">
   <div class="container">
-    <h1 class="display-4">Jason Howie</h1>
+    <h1 class="display-4">{{ site.title }}</h1>
     <p class="lead">Aspiring Web Developer</p>
   </div>
 </div>
