--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		{% if jekyll.environment == 'production' %}
 		{% include analytics.html %}
+		{% endif %}
 		<meta charset="UTF-8">
 		<meta name="description" content="{{ site.description }}">
 		<meta name="keywords" content="{{ site.title }} Developer">
 		<meta name="author" content="{{ site.author }}">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" href="{{ site.baseurl }}{% link img/favicon.ico %}">
-		<title>{{ page.title }} {% if page.layout == 'post' %}| Blog {% endif %} | {{ site.title }} </title>
+		<title>{{ page.title }} {% if page.layout == 'post' %}| Blog {% endif %}{% if page.layout == 'project' %}| Portfolio {% endif %}| {{ site.title }} </title>
 		<!-- Font Awesome CDN -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 		<!-- bootstrap CDN -->
