--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="container">
 	<h5>{{ page.title }}</h5>
-	<h6>Created: {{ page.date | date: '%B $Y' }}</h6>
+	<h6>Created: {{ page.date | date: '%B %Y' }}</h6>
 	<p>{{ page.description }}</p>
 </div>
 <div class="container">
