--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -12,7 +12,8 @@ layout: default
 <div class="container">
 	{{ content }}
 	{% if page.live_url %}
-	<a href="{{ page.live_url }}" target="_blank">Visit Live Site</a>
+	<a href="{{ page.live_url }}" target="_blank" class="btn btn-info">Live Site</a>
 	{% endif %}
-	<p>View the <a href="{{ page.github_url }}" target="_blank">github repo</a></p>
+	<span><a href="{{ page.github_url }}" target="_blank" class="btn btn-info">Github Repo</a></span>
+	<span><a href="/portfolio/" class="btn btn-info">Back</a></span>
 </div>
