--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,9 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<!-- Animate.CSS -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+		<!-- Normalize.CSS -->
+		<link rel="stylesheet" href="{{ site.baseurl }}{% link styles/normalize.css %}">
+		<!-- My Styles -->
 		<link rel="stylesheet" href="{{ site.baseurl }}{% link styles/styles.css %}">
 	</head>
 	<body>
