edit blog layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,8 @@
 		  </div>
 		</nav>
 	</body>
+	<!-- Disque comment count script -->
+	<script id="dsq-count-scr" src="//jasonrhowie.disqus.com/count.js" async></script>
 	<!-- JQuery CDN -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<!-- bootstrap.js CDN -->
