--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ comments: true
 <div class="container post">
 	<h5>{{ page.title }}</h5>
 	<h6>{{ page.date | date: "%A - %m/%d/%y" }}</h6>
-	<p>By: {{ site.author }} | <a href="{{ post.url }}#disqus_thread"></a></p>
+	<p>By: {{ site.author }} {% if page.comments %}| <a href="{{ post.url }}#disqus_thread"></a>{% endif %}</p>
 	{{ content }}
 </div>
 <div class="container">
