--- a/_includes/soc_media.html
+++ b/_includes/soc_media.html
@@ -1,4 +1,5 @@
 <p>
+	<a href="https://twitter.com/JSONHowie" target="_blank"><i class="fab fa-twitter"></i></a>
 	<a href="https://github.com/bt93" target="_blank"><i class="fab fa-github"></i></a>
 	<a href="https://www.linkedin.com/in/jason-howie-837ba36b/" target="_blank"><i class="fab fa-linkedin"></i></a>
 	<a href="https://www.youtube.com/channel/UCF5LcI7ConBpK0k-JooewCg" target="_blank"><i class="fab fa-youtube"></i></a>
